# Xshare

./: README.md  index.html  index1.php
XshareClient/: .project  AndroidManifest.xml
XshareClient/assets/: index.html  test.html
XshareClient/assets/css/: index.css
XshareClient/assets/js/: index.js
XshareClient/assets/nbproject/: project.properties  project.xml
XshareClient/res/drawable/: btn_green.xml  btn_yellow.xml  list_corner_round.xml  title_green.xml
XshareClient/res/layout/: activity_file_list.xml  activity_file_select.xml  activity_login.xml  activity_main.xml  activity_register.xml  file_row.xml  (+1 more)
audience/: fs.js  index.html  login.html  selectRoom.php  show.php  test.html  toshow.php  toshow.php_  toshow.php_2013-12  ts.js
audience/css/: index.css  login_css.css  toshow.css
audience/js/: fs.js  index.js  ts.js  websocket.js
control/: ERROR_CODE.php  checkProcess.php  pdfhandler.py  requestHandler.php  upload.php
control/raw_files_to_be_changed/: veen_CV.xls
css/: index.css  index.css~
js/: fs.js  index.js  toindex.js  toindex.js~  ts.js  websocket.js
model/: mDatabase.php
pdf2html/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  extract.sh  install_manifest.txt  libcrypto.so.1.0.0  libgunicode.so.3  libgutils.so.1  libtiff.so.4  libuninameslist.so.0  pdf2htmlEX  pdf2htmlEX.1  veen_download.html
pdf2html/share/: base.css  pdf2htmlEX.js
pdf2html/sos/: libfontforge.so.1  libgif.so.4  libpng15.so.15  libspiro.so.0  libssl.so.1.0.0  libxml2.so.2
pdf2html/src/: pdf2htmlEX-config.h
pdf2html/src/util/: css_const.h
(+23 files in other folders)
